# google-auth-library-python

./: .coverage.ariesnet1.19552.XlmcEiex  .coveragerc  .gitignore  .readthedocs.yaml  .repo-metadata.json  .travis.yml  404.rst  =59.0.0  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.md  Eneth12  Eneth15  Eneth5  MANIFEST.in  README.md  README.rst  cert.pem  conf.py  credential_mapping.txt  dev-requirements.txt  example.py  example1.py  fuzzed-output.txt  genindex.html  id_token_sample.py  index.html  index.rst  make_redirects.py  mypy.ini  mypy_output.txt  noxfile.py  oauth2client-deprecation.html  objects.inv  owlbot.py  phase-1-status.md  phase-2-status.md  py-modindex.html  pylintrc  (+20 more)
.github/: .OwlBot.lock.yaml  CODEOWNERS
.kokoro/: build.sh  common.cfg  conformance-tests.sh  publish-docs.sh  release.sh  requirements.in  requirements.txt  test-samples.sh  trampoline.sh
.librarian/: release-init-request.json  state.yaml
_modules/: abc.html  index.html
conformance-tests/: user_tests.py
docs/: README.md  conf.py  getting-started.md  index.rst  oauth2client-deprecation.rst  requirements-docs.txt  service-accounts.md  user-guide.rst
examples/: README.md  drive_basic.py  gcs_upload.py  getexample.py  gmail_send.py  insertexample.py  sheets_read.py
google/: __init__.py
google_auth_rewired/: __init__.py  lite.py  scopes.py
httplib2_transport/: README.rst  setup.py  tox.ini
my/: README.md  README.txt  cert.pem  ec_key.pem  key.pem  mtls.pfx  rsa_key.pem  server.go  store.py  test_windows_signer.py  tls_sample.py
offload_sample/: README.md  ca_cert.pem  daemon.py  ec_cert.pem  ec_mtls.pfx  rsa_cert.pem  rsa_mtls.pfx  sample.py  server.go  test_daemon.py
reference/: google.auth._credentials_async.html  google.auth._jwt_async.html  google.auth.app_engine.html  google.auth.aws.html  google.auth.compute_engine.credentials.html  google.auth.compute_engine.html  google.auth.credentials.html  google.auth.crypt.base.html  google.auth.crypt.es256.html  google.auth.crypt.html  google.auth.crypt.rsa.html  google.auth.environment_vars.html  google.auth.exceptions.html  google.auth.external_account.html  google.auth.html  google.auth.iam.html  google.auth.identity_pool.html  google.auth.impersonated_credentials.html  google.auth.jwt.html  google.auth.transport._aiohttp_requests.html  google.auth.transport.grpc.html  google.auth.transport.html  google.auth.transport.mtls.html  google.auth.transport.requests.html  google.auth.transport.urllib3.html  google.html  google.oauth2._credentials_async.html  google.oauth2._service_account_async.html  google.oauth2.credentials.html  google.oauth2.html  google.oauth2.id_token.html  google.oauth2.service_account.html  google.oauth2.sts.html  google.oauth2.utils.html  modules.html
samples/: verify_async_mtls.py  verify_async_python_test.py  verify_async_static_creds.py  verify_sync_mtls.py  verify_vertex_async.py
scripts/: obtain_user_auth.py  run_pylint.py  setup_external_accounts.sh  travis.sh
system_tests/: conftest.py  nox.py  noxfile.py  secrets.tar.enc  test_compute_engine.py  test_default.py  test_grpc.py  test_id_token.py  test_impersonated_credentials.py  test_mtls_http.py  test_oauth2_credentials.py  test_service_account.py
system_tests_async/: conftest.py  (+3 more)
(+443 files in other folders)
