[project]
name = "google-auth-rewired"
version = "0.1.0"
description = "Lightweight, developer-first Google Auth SDK"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "google-auth",
    "google-auth-oauthlib",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["google_auth_rewired"]
